--- a/monitoring/backend/Dockerfile
+++ b/monitoring/backend/Dockerfile
@@ -1,9 +1,10 @@
 FROM python:3.11-slim
-
 WORKDIR /app
-
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential libpq-dev curl ca-certificates && \
+    rm -rf /var/lib/apt/lists/*
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 COPY fpl_full_ingest.py .
-
-RUN pip install --no-cache-dir pandas requests psycopg2-binary
 
 CMD ["python", "fpl_full_ingest.py"]
